<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:onClick="secondActivity"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/pressure"
        app:layout_constraintStart_toStartOf="@+id/pressure"
        tools:context="com.superdild.app.newweatherapp.MainActivity">

        <ImageView
            android:id="@+id/textImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/meteo_icon"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toStartOf="@+id/show_temp_min"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:fontFamily="cursive"
            android:maxLines="2"
            android:text="Temp_description"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/temp_max" />

        <TextView
            android:id="@+id/temp_max"
            style="@style/Base.TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="max"
            android:textColor="@android:color/holo_red_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/temp_min"
            app:layout_constraintTop_toBottomOf="@+id/show_temp_min" />

        <TextView
            android:id="@+id/show_temp_min"
            style="@style/Base.TextAppearance.AppCompat.Display3"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/temp_min"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textImage"
            app:layout_constraintTop_toTopOf="@+id/textImage"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/temp_min"
            style="@style/Base.TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="min"
            android:textColor="@android:color/holo_blue_light"
            app:layout_constraintEnd_toStartOf="@+id/temp_max"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/show_temp_min" />


        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/oval_shape"
            android:text="@string/update"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/show_pressure"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/pressure"
            style="@style/TitleStyle"
            app:layout_constraintEnd_toStartOf="@+id/progressBar"
            app:layout_constraintTop_toBottomOf="@+id/description" />

        <TextView
            android:id="@+id/pressure"
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:text="press"
            android:textColor="@color/colorPrimary"
            app:layout_constraintStart_toEndOf="@+id/progressBar"
            app:layout_constraintTop_toBottomOf="@+id/description" />

        <TextView
            android:id="@+id/show_humidity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/umidity"
            style="@style/TitleStyle"
            app:layout_constraintStart_toStartOf="@+id/show_wind_speed"
            app:layout_constraintTop_toBottomOf="@+id/show_wind_speed" />

        <TextView
            android:id="@+id/humidity"
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:text="humi"
            android:textColor="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="@+id/wind_speed"
            app:layout_constraintTop_toBottomOf="@+id/wind_speed" />

        <TextView
            android:id="@+id/show_wind_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/wind"
            style="@style/TitleStyle"
            app:layout_constraintStart_toStartOf="@+id/show_pressure"
            app:layout_constraintTop_toBottomOf="@+id/show_pressure" />

        <TextView
            android:id="@+id/wind_speed"
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="speed"
            android:textColor="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="@+id/pressure"
            app:layout_constraintTop_toBottomOf="@+id/pressure" />

        <TextView
            android:id="@+id/wind_dir"
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:text="dir"
            android:textColor="@color/colorPrimary"
            app:layout_constraintStart_toEndOf="@+id/wind_speed"
            app:layout_constraintTop_toBottomOf="@+id/pressure" />

        <TextView
            android:id="@+id/data"
            style="@style/TitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="data"
            app:layout_constraintBottom_toBottomOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button"
            app:layout_constraintTop_toTopOf="@+id/button" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/show_alba"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/sunrise"
            style="@style/TitleStyle"
            app:layout_constraintEnd_toStartOf="@+id/alba"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/show_humidity" />

        <TextView
            android:id="@+id/alba"
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="24dp"
            android:text="hh:mm"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toStartOf="@+id/show_tramonto"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/show_alba"
            app:layout_constraintTop_toBottomOf="@+id/show_humidity" />

        <TextView
            android:id="@+id/show_tramonto"
            style="@style/TitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/sunset"

            app:layout_constraintEnd_toStartOf="@+id/tramonto"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/alba"
            app:layout_constraintTop_toBottomOf="@+id/show_humidity" />

        <TextView
            android:id="@+id/tramonto"
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="hh:mm"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/show_tramonto"
            app:layout_constraintTop_toBottomOf="@+id/show_humidity" />


    </android.support.constraint.ConstraintLayout>
</layout>